2003-12-03  Terry <tbiggs@users.sf.net>

	* added gui_alert_dialog() to gnome2/dialog.c - much closer to HIG 
	  for alerts than gui_gs_dialog().
	


2003-12-02  Terry <tbiggs@users.sf.net>

	* work in dialog.c 
	   * rearanged buttons 
	   * stock icon can be added
	   * if title string is not passed to gui_gs_dialog(GS_DIALOG * info)
	     you get no title instead of default title.
	   * top label is formatted bold.
	   * changed code to use gtk_dialog "response" signal when 
	     buttons are clicked instead of button "clicked" signal
	     

2003-12-01  Terry <tbiggs@users.sf.net>

	* fixed bug #852017 (?) - gs will run if setup_druid is canceled
	  but now pops up a dialog and asks if the user wishes to run the 
	  preferences_dialog


2003-11-30  Andy <andyp@users.sf.net>

	* stripped out the colour-changing code from the setup_druid as
	  it is inconsistent to change the heading colour between pages
	

2003-11-29  Terry <tbiggs@users.sf.net>

	* add gnome-spell support


2003-11-28  Terry <tbiggs@users.sf.net>

	* remove close button from the search dialog


2003-11-27  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev16
	* worked on bug 842526 - needs testing
	* changed icons in setup_druid to gs2-48x48.png


2003-11-25  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev15
	* configure enables spellchecking if it finds pspell.
	* studypad chrash on open is fixed again.
	* if there are no modules of a type the pane for that type will
	  be hidden.


2003-11-24  Terry <tbiggs@users.sf.net>

	* removed gnome2/shortcutbar.h it was no longer needed
	* combined "search results" and "verse list" in the sidebar


2003-11-24  Andy Piper <andyp@users.sf.net>

	* docs are conventionally installed to /usr/share/doc and not to
	  /usr/doc so we'll fix configure.in and Makefile.am to do that. This
	  means that a 'make uninstall' won't kill the /usr/doc directory
	  (which probably only contains a gnomesword2 directory as /usr/doc